Refactor solar system and prioritize key experiences in About page
- Fixed ReferenceError: useEffect in Planet.tsx by adding missing import.
- Cleaned up unused React imports in SolarSystem.tsx.
- Prioritized 'CDH Department Member @ LISAT Team' at the top of the job list in About.tsx.
- Added new components: BackgroundMusic, useDynamicOrbit, useSoundEffects, and textUtils.
- Updated multiple components to support dynamic orbits, sound effects, and improved UI layouts.
- Removed legacy assets and boilerplate files.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using Vite"
+      content="Gabriel Leitão - Aerospace Engineering Portfolio."
     />
-    <link rel="apple-touch-icon" href="/logo192.png" />
-    <link rel="manifest" href="/manifest.json" />
-    <title>React App</title>
+    <title>Gabriel Leitão | Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
